# Hyperbolic

./: Behaviour.hs  CMakeLists.txt  Camera.hs  DebugTH.hs  Editor.pro  Graphics.hi  Graphics.hs  HGCPP.pro  Hyperbolic.cabal  Hyperbolic.cmake  Hyperbolic.hi  Hyperbolic.hs  Hyperbolic.pro  Interaction.hs  LICENSE  Physics.hs  Projection.hi  Projection.hs  Projective.hs  README.md  Universe.hi  Universe.hs  cabal.config  cabal.sandbox.config  commongraphics.cpp  commongraphics.h  cube  dodecahedron-2017-04-29  hyperbolic.cabal  hyperbolic.hs  linear.hs  main.cpp  octagon  pentagonal-2017-04-29  projection.hs  projective.hs  select.frag  select.vert  stack.yaml  tonix.sh  (+3 more)
.stack-work/install/i386-linux/lts-5.3/7.10.3/flag-cache/: GLURaw-2.0.0.1-cd5e9bb65881b77a6c62f6ccfd186158  GLUT-2.7.0.6-2721efb57cf61ce4525c9cea8a226760  ObjectName-1.1.0.1-331527f3880d7a49e1f0c681d7501812  OpenGL-3.0.0.1-581d6fd6993c07e4ff7334d25fba7a46  OpenGLRaw-3.1.0.0-4813b23df3e1411508d1fe951972674c  StateVar-1.1.0.3-fe43be4b518a463df5a97be073edbdde  adjunctions-4.3-3596eb366524f876ace17408b4024686  base-orphans-0.5.1-9009edd4a84d81bd18c643866b0e21f5  bifunctors-5.2-de63568caa8594b86a38e8cd9a6f20bf  (+30 more)
Test/: test.hs
Triangle/: Triangle.pro  main.cpp  persistentlineedit.h  triangle.cpp  triangle.h  triangle.ui
editor/: Editing.hs  Editor.hs  Graphics.hs  editor.cpp  editor.h  editorwindow.cpp  editorwindow.h  editorwindow.ui  level.cpp  level.h  main.cpp  statedeclarations.h  thefuckingthing.cpp  thefuckingthing.h
game/: Ansi.hs  Graphics.hs  Interaction.hs  console.cpp  console.h  editor.cpp  editor.h  gameloop.cpp  gameloop.h  graphics.cpp  graphics.h  level.cpp  level.h
util/: Hyperbolic.hs  Physics.hs  Riemann.hs  commongraphics.cpp  commongraphics.h  example_opengl.cpp  hyperbolic.cpp  hyperbolic.h  linear.h  physics.cpp  physics.h  serialize.h  shittyreflection.h
